stylesheets/sidebarStyle.css
/*style the sidebar contents */
#salvage-sidebar{
}

.sidebar-header{
    display: flex;
    justify-content: space-between;
}

#salvage-sidebar h1{
    margin-left: 10px;
    font-size: 20px;
    margin-top: 5px;
}

#list-of-auctions{
    width: 100%;
    list-style-type: none;
    margin-left: 0px;
    padding-left: 0px;
}

#list-of-auctions li{
    padding-left: 0px;
    width: 100%;
    margin-top: 5px;
    cursor: pointer;
}

#list-of-auctions li:nth-child(2n+1){
    background-color: lightgray;
}

button {
    height: 30px;
    width: 30px;
    outline: none;
}

/* The switch - (box around the slider) */
.switch {
    margin: 10px;
    position: relative;
    display: inline-block;
    width: 60px;
    height: 34px;
}

/* Hide default HTML checkbox */
.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

/* The slider */
.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: .4s;
    transition: .4s;
}

.slider:before {
    position: absolute;
    content: "";
    height: 26px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
}

input:checked + .slider {
    background-color: #3665f3;
}

input:focus + .slider {
    box-shadow: 0 0 1px #3665f3;
}

input:checked + .slider:before {
    -webkit-transform: translateX(26px);
    -ms-transform: translateX(26px);
    transform: translateX(26px);
}

/* Round slider */
.slider.round {
    border-radius: 34px;
}

.slider.round:before {
    border-radius: 50%;
}



/*Responsive extension*/

